Removed the progress- prefix for progress cases.

--- a/proof/proof.tex
+++ b/proof/proof.tex
@@ -5,12 +5,12 @@
 \newtheorem{case}{Case}[theorem]
 \newtheorem{subcase}{Case}[case]
 \begin{document}
-\input{inversion.tex}
-\input{uniqueness-of-types.tex}
-\input{canonical-forms.tex}
-\input{term-substitution.tex}
-\input{type-substitution.tex}
-\input{progress.tex}
-%\input{evaluation-context-preservation.tex}
-%\input{preservation.tex}
+\input{lemmas/progress/inversion.tex}
+\input{lemmas/progress/uniqueness-of-types.tex}
+\input{lemmas/progress/canonical-forms.tex}
+\input{lemmas/progress/term-substitution.tex}
+\input{lemmas/progress/type-substitution.tex}
+\input{theorems/progress.tex}
+%\input{lemmas/preservation/evaluation-context-preservation.tex}
+%\input{theorems/preservation.tex}
 \end{document}
