Finished progress SM e.

--- a/proof/cases/progress/she.tex
+++ b/proof/cases/progress/she.tex
@@ -10,7 +10,7 @@ $e_{H}^{1}=\overline{n}$ by canonical forms (Lemma \ref{cf}).  $SH^{N}\;\overlin
 \begin{subcase}
 $T=T_{1}\rightarrow T_{2}$
 
-$e_{H}^{1}=\lambda x_{1}:T_{1}.e_{H}^{3}$ by canonical forms (Lemma \ref{cf}).  $SH^{T_{1}\rightarrow T_{2}}\;(\lambda x_{1}:T_{1}.e_{H}^{3})\rightarrow\lambda x_{2}:T_{1}[T_{i}/T^{a}_{i}].(SH^{T_{2}}\;((\lambda x_{1}:T_{1}.e_{H}^{3})\;(SH^{T_{1}}\;x_{2})))$.
+$e_{H}^{1}=\lambda x_{1}:T_{1}.e_{H}^{3}$ by canonical forms (Lemma \ref{cf}).  $SH^{T_{1}\rightarrow T_{2}}\;(\lambda x_{1}:T_{1}.e_{H}^{3})\rightarrow\lambda x_{2}:T_{1}[T_{i}/T^{a}_{i}].(SH^{T_{2}}\;((\lambda x_{1}:T_{1}.e_{H}^{3})\;(^{T_{1}}HS\;x_{2})))$.
 \end{subcase}
 \begin{subcase}
 $T=\forall X_{1}.T_{1}$
