--- a/proof/theorems/progress.tex
+++ b/proof/theorems/progress.tex
@@ -4,32 +4,32 @@
 If $\vdash_{HMS}e_{HMS}:T$ then $e_{HMS}$ is a value or $e_{HMS}\rightarrow e_{HMS}'$ or $e_{HMS}\rightarrow$ \emph{\textbf{Error}:\;string}.
 \begin{proof}
 By structural induction on $e_{HMS}$.
-\input{progress-variable.tex}
-\input{progress-number.tex}
-\input{progress-term-abstraction-hm.tex}
-\input{progress-term-abstraction-s.tex}
-\input{progress-type-abstraction.tex}
-\input{progress-list-h.tex}
-\input{progress-list-ms.tex}
-\input{progress-nil-hm.tex}
-\input{progress-nil-s.tex}
-\input{progress-term-application-h.tex}
-\input{progress-term-application-m.tex}
-\input{progress-term-application-s.tex}
-\input{progress-type-application-h.tex}
-\input{progress-type-application-m.tex}
-\input{progress-if-hm.tex}
-\input{progress-arithmetic-hm.tex}
-\input{progress-arithmetic-s.tex}
-\input{progress-field-h.tex}
-\input{progress-field-m.tex}
-\input{progress-field-s.tex}
-\input{progress-fix.tex}
-\input{progress-hme.tex}
-\input{progress-hse.tex}
-\input{progress-mhe.tex}
-\input{progress-mse.tex}
-\input{progress-she.tex}
-\input{progress-sme.tex}
+\input{cases/progress/variable.tex}
+\input{cases/progress/number.tex}
+\input{cases/progress/term-abstraction-hm.tex}
+\input{cases/progress/term-abstraction-s.tex}
+\input{cases/progress/type-abstraction.tex}
+\input{cases/progress/list-h.tex}
+\input{cases/progress/list-ms.tex}
+\input{cases/progress/nil-hm.tex}
+\input{cases/progress/nil-s.tex}
+\input{cases/progress/term-application-h.tex}
+\input{cases/progress/term-application-m.tex}
+\input{cases/progress/term-application-s.tex}
+\input{cases/progress/type-application-h.tex}
+\input{cases/progress/type-application-m.tex}
+\input{cases/progress/if-hm.tex}
+\input{cases/progress/arithmetic-hm.tex}
+\input{cases/progress/arithmetic-s.tex}
+\input{cases/progress/field-h.tex}
+\input{cases/progress/field-m.tex}
+\input{cases/progress/field-s.tex}
+\input{cases/progress/fix.tex}
+\input{cases/progress/hme.tex}
+\input{cases/progress/hse.tex}
+\input{cases/progress/mhe.tex}
+\input{cases/progress/mse.tex}
+\input{cases/progress/she.tex}
+\input{cases/progress/sme.tex}
 \end{proof}
 \end{theorem}
