Going home for dinner.

--- a/proof/proof.tex
+++ b/proof/proof.tex
@@ -11,6 +11,6 @@
 \input{lemmas/progress/term-substitution.tex}
 \input{lemmas/progress/type-substitution.tex}
 \input{theorems/progress.tex}
-%\input{lemmas/preservation/evaluation-context-preservation.tex}
-%\input{theorems/preservation.tex}
+\input{lemmas/preservation/evaluation-context-preservation.tex}
+\input{theorems/preservation.tex}
 \end{document}
