--- a/proof/theorems/preservation.tex
+++ b/proof/theorems/preservation.tex
@@ -15,6 +15,8 @@ By cases on the reduction $e_{HMS}^{1}\rightarrow e_{HMS}^{2}$.  Scheme reductio
 \input{cases/preservation/head-nil.tex}
 \input{cases/preservation/tail-nil.tex}
 \input{cases/preservation/fix.tex}
+\input{cases/preservation/number.tex}
+\input{cases/preservation/universal.tex}
 %\input{cases/preservation/.tex}
 
 \begin{case}
