--- a/proof/theorems/preservation.tex
+++ b/proof/theorems/preservation.tex
@@ -25,6 +25,8 @@ By cases on the reduction $e_{HMS}^{1}\rightarrow e_{HMS}^{2}$.  Scheme reductio
 \input{cases/preservation/type-application-s.tex}
 \input{cases/preservation/function-s.tex}
 \input{cases/preservation/function-e.tex}
+\input{cases/preservation/label.tex}
+\input{cases/preservation/label-e.tex}
 %\input{cases/preservation/.tex}
 \end{proof}
 \end{theorem}
