Finished pn s-lumps.

--- a/model/mit.tex
+++ b/model/mit.tex
@@ -4,7 +4,7 @@
 $e_{M}$ & $=$ & $\cdots\;\vert\;^{T}MH^{T}\;e_{H}\;\vert\;^{T}MS\;e_{S}$ \\
 $v_{M}$ & $=$ & $\cdots\;\vert\;^{[T]}MH^{[T]}\;v_{H}\;\vert\;^{L}MS\;v_{S}\;\vert\;^{\forall X.T}MS\;v_{S}$ \\
 $T$ & $=$ & $\cdots\;\vert\;L\;\vert\;T^{a}$ \\
-$a$ & $=$ & Type annotations (a, b, \ldots) \\
+$a$ & $=$ & Type labels (a, b, \ldots) \\
 $E_{M}$ & $=$ & $\cdots\;\vert\;^{T}MH^{T}\;E_{H}\;\vert\;^{T}MS\;E_{S}$
 \end{tabular}
 \end{center}
