--- a/model/hit.tex
+++ b/model/hit.tex
@@ -4,7 +4,7 @@
 $e_{H}$ & $=$ & $\cdots\;\vert\;^{T}HM^{T}\;e_{M}\;\vert\;^{T}HS\;e_{S}$ \\
 $v_{H}$ & $=$ & $\cdots\;\vert\;^{L}HS\;v_{S}\;\vert\;^{\forall X.T}HS\;v_{S}$ \\
 $T$ & $=$ & $\cdots\;\vert\;L\;\vert\;T^{a}$ \\
-$a$ & $=$ & Type annotations (a, b, \ldots) \\
+$a$ & $=$ & Type labels (a, b, \ldots) \\
 $E_{H}$ & $=$ & $\cdots\;\vert\;^{T}HM^{T}\;E_{M}\;\vert\;^{T}HS\;E_{S}$
 \end{tabular}
 \end{center}
