--- a/proof/theorems/preservation.tex
+++ b/proof/theorems/preservation.tex
@@ -29,6 +29,9 @@ By cases on the reduction $e_{HMS}^{1}\rightarrow e_{HMS}^{2}$.  Scheme reductio
 \input{cases/preservation/h-cons-m.tex}
 \input{cases/preservation/m-cons-h.tex}
 \input{cases/preservation/hm-cons-s.tex}
+\input{cases/preservation/s-head-cons-h.tex}
+\input{cases/preservation/s-tail-cons-h.tex}
+\input{cases/preservation/s-cons-m.tex}
 \input{cases/preservation/hm-nil-s.tex}
 \input{cases/preservation/hm-list-e.tex}
 \input{cases/preservation/hm-label-s.tex}
